--- a/writehat/config/writehat.conf
+++ b/writehat/config/writehat.conf
@@ -18,7 +18,7 @@ port = 27017
 database = 'writehat'
 user = 'root'
 # don't forget to place a matching password in docker-compose.yml
-password = 'FORTHELOVEOFGEEBUSPLEASECHANGETHIS'
+password = 'bxWd39FJ23A4rMnKDXjm'
 
 
 [mysql]
@@ -27,7 +27,7 @@ port = 3306
 database = 'writehat'
 user = 'writehat'
 # don't forget to place a matching password in docker-compose.yml
-password = 'CHANGETHISIFYOUAREANINTELLIGENTHUMANBEING'
+password = 'Wrxct6tf9JHgjmpL2aUK'
 
 
 [ldap]
