--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       - ./writehat/config/nginx.conf:/etc/nginx/conf.d/writehat.conf
       - ./writehat/static:/opt/writehat/static
     ports:
-      - 80:80
-      - 443:443
+      - 80
+      - 443
     depends_on:
       - writehat
 
@@ -41,7 +41,7 @@ services:
       - ./mongo/db:/data/db
     environment:
       - MONGO_INITDB_ROOT_USERNAME=root
-      - MONGO_INITDB_ROOT_PASSWORD=bxWd39FJ23A4rMnKDXjm
+      - MONGO_INITDB_ROOT_PASSWORD=FORTHELOVEOFGEEBUSPLEASECHANGETHIS
     expose:
       - 27017
 
@@ -50,10 +50,10 @@ services:
     volumes:
       - ./mysql:/var/lib/mysql
     environment:
-      MYSQL_ROOT_PASSWORD: Wrxct6tf9JHgjmpL2aUK
+      MYSQL_ROOT_PASSWORD: CHANGETHISIFYOUAREANINTELLIGENTHUMANBEING
       MYSQL_DATABASE: writehat
       MYSQL_USER: writehat
-      MYSQL_PASSWORD: Wrxct6tf9JHgjmpL2aUK
+      MYSQL_PASSWORD: CHANGETHISIFYOUAREANINTELLIGENTHUMANBEING
     expose:
       - 3306
     restart: always
