--- a/writehat/config/writehat.conf
+++ b/writehat/config/writehat.conf
@@ -6,8 +6,8 @@ admin_password = 'PLEASECHANGETHISFORHEAVENSSAKE'
 # SECURITY WARNING: keep the secret key used in production secret!
 secret = 'INTHENAMEOFALLTHATISHOLYPLEASECHANGETHIS'
 # Add your custom hostname here
-allowed_hosts = ['localhost', '127.0.0.1', 'nginx', 'writehat', 'writehat.corp.local']
-timezone = 'America/New_York'
+allowed_hosts = ['localhost', '127.0.0.1', 'nginx', 'writehat', 'writehat.corp.local', '35.238.67.230', ]
+timezone = 'America/Edmonton'
 # SECURITY WARNING: don't run with debug turned on in production!
 debug = false
 
@@ -18,7 +18,7 @@ port = 27017
 database = 'writehat'
 user = 'root'
 # don't forget to place a matching password in docker-compose.yml
-password = 'bxWd39FJ23A4rMnKDXjm'
+password = 'FORTHELOVEOFGEEBUSPLEASECHANGETHIS'
 
 
 [mysql]
@@ -27,7 +27,7 @@ port = 3306
 database = 'writehat'
 user = 'writehat'
 # don't forget to place a matching password in docker-compose.yml
-password = 'Wrxct6tf9JHgjmpL2aUK'
+password = 'CHANGETHISIFYOUAREANINTELLIGENTHUMANBEING'
 
 
 [ldap]
