Rigidly define pip requirements to prevent breaking changes.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,27 @@
-toml
-bleach
-django
-pymongo
-PyMySQL
-markdown
-openpyxl
-selenium
-mongo-tools
-cryptography
-django-python3_ldap
+asgiref==3.3.1
+bleach==3.3.0
+blessings==1.7
+cffi==1.14.5
+cryptography==3.4.7
+Django==3.1.7
+django-python3-ldap==0.11.4
+docopt==0.6.2
+et-xmlfile==1.0.1
+ldap3==2.9
+Markdown==3.3.4
+mongo-tools==0.0.2
+openpyxl==3.0.7
+packaging==20.9
+pyasn1==0.4.8
+pycparser==2.20
+pymongo==3.11.3
+PyMySQL==1.0.2
+pyparsing==2.4.7
+pytz==2021.1
+selenium==3.141.0
+six==1.15.0
+sqlparse==0.4.1
+toml==0.10.2
+urllib3==1.26.4
+uWSGI==2.0.19.1
+webencodings==0.5.1
